# solana-stream

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
client/geyser-rs/: Cargo.toml
client/geyser-rs/src/: main.rs
client/geyser-ts/: .env.example  package.json
client/geyser-ts/src/: index.ts
client/shreds-rs/: Cargo.toml
client/shreds-rs/src/: main.rs
crate/solana-stream-sdk/: Cargo.toml  README.md  build.rs
crate/solana-stream-sdk/src/: error.rs  lib.rs  shredstream.rs
package/solana-stream-sdk/: LICENSE  README.md  package.json  tsconfig.json
package/solana-stream-sdk/src/: index.ts
temp-release/geyser-ts/: .env.example  README.md  package.json  tsconfig.json
temp-release/geyser-ts/src/: index.ts
temp-release/shreds-rs/: .env.example  Cargo.toml  README.md
temp-release/shreds-rs/src/: main.rs
