[package]
name = "shreds-rs"
version = { workspace = true }
description = "Rust client for Solana shreds streaming"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "shreds-rs"
path = "src/main.rs"

[dependencies]
bincode = { workspace = true }
solana-stream-sdk = { workspace = true }
solana-entry = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
